Replace PrimeNG components with Tailwind CSS styling
Refactor all Angular components to use Tailwind CSS utility classes instead of
PrimeNG component library. Add custom modal and toast shared components to
replace PrimeNG equivalents. This reduces bundle size and provides more
consistent, maintainable styling across the application.